--- a/src/vscp/drivers/level1/can4vscp/linux/Makefile.in
+++ b/src/vscp/drivers/level1/can4vscp/linux/Makefile.in
@@ -12,6 +12,7 @@ top_srcdir = @top_srcdir@
 top_wxsrcdir = @top_wxsrcdir@
 top_builddir = @top_builddir@
 top_wxbuilddir = @top_wxbuilddir@
+VSCP_PROJ_BASE_DIR=@VSCPDIR@
 
 CC = @CC@
 CXX = @CXX@
@@ -83,7 +84,7 @@ ALWAYS_BUILD = ../../../../common/guid.o\
 all: vscpl1_can4vscpdrv.so test
 
 install: all
-	$(INSTALL_PROGRAM) vscpl1_can4vscpdrv.so $(libdir)
+	$(INSTALL_PROGRAM) vscpl1_can4vscpdrv.so $(VSCP_PROJ_BASE_DIR)
 
 uninstall: 
 
