--- a/src/vscp/drivers/level1/xap/linux/Makefile.in
+++ b/src/vscp/drivers/level1/xap/linux/Makefile.in
@@ -4,6 +4,7 @@
 
 # STATIC = yes if a static build is requested.
 STATIC=@STATIC@
+VSCP_PROJ_BASE_DIR=@VSCPDIR@
 
 prefix = @prefix@
 exec_prefix = @exec_prefix@
@@ -76,7 +77,7 @@ ALWAYS_BUILD = ../../../../common/guid.o\
 all: vscpl1_xapdrv.so test
 
 install: all
-	$(INSTALL_PROGRAM) vscpl1_xapdrv.so $(libdir)
+	$(INSTALL_PROGRAM) vscpl1_xapdrv.so $(VSCP_PROJ_BASE_DIR)/drivers/level1
 
 uninstall: 
 
