--- a/src/vscp/drivers/level2/lmsensors/linux/Makefile.in
+++ b/src/vscp/drivers/level2/lmsensors/linux/Makefile.in
@@ -4,6 +4,7 @@
 
 # STATIC = yes if a static build is requested.
 STATIC=@STATIC@
+VSCP_PROJ_BASE_DIR=@VSCPDIR@
 
 prefix = @prefix@
 exec_prefix = @exec_prefix@
@@ -93,7 +94,7 @@ PROJOBJS = lmsensors.o\
 all: vscpl2drv_lmsensors.so
 
 install: all
-	$(INSTALL_PROGRAM) vscpl2drv_lmsensors.so $(libdir)
+	$(INSTALL_PROGRAM) vscpl2drv_lmsensors.so $(VSCP_PROJ_BASE_DIR)/drivers/level2
 
 uninstall: 
 
