--- a/src/vscp/drivers/level2/wire1/linux/Makefile.in
+++ b/src/vscp/drivers/level2/wire1/linux/Makefile.in
@@ -4,6 +4,7 @@
 
 # STATIC = yes if a static build is requested.
 STATIC=@STATIC@
+VSCP_PROJ_BASE_DIR=@VSCPDIR@
 
 prefix = @prefix@
 exec_prefix = @exec_prefix@
@@ -102,7 +103,7 @@ ALWAYS_BUILD = ../../../../common/vscpremotetcpif.o\
 all: vscpl2drv_wire1.so test
 
 install: all
-	$(INSTALL_PROGRAM) vscpl2drv_wire1.so $(libdir)
+	$(INSTALL_PROGRAM) vscpl2drv_wire1.so $(VSCP_PROJ_BASE_DIR)/drivers/level2
 
 uninstall: 
 
