--- a/src/vscp/drivers/level1/logger/linux/Makefile.in
+++ b/src/vscp/drivers/level1/logger/linux/Makefile.in
@@ -79,6 +79,7 @@ ALWAYS_BUILD = ../../../../common/guid.o\
 all: vscpl1_loggerdrv.so test
 
 install: all
+	$(VSCP_PROJ_BASE_DIR)/drivers/level1
 	$(INSTALL_PROGRAM) vscpl1_loggerdrv.so $(VSCP_PROJ_BASE_DIR)/drivers/level1
 
 uninstall: 
