--- a/src/vscp/drivers/level2/logger/linux/Makefile.in
+++ b/src/vscp/drivers/level2/logger/linux/Makefile.in
@@ -102,6 +102,7 @@ ALWAYS_BUILD = ../../../../common/vscpremotetcpif.o\
 all: vscpl2drv_logger.so test
 
 install: all
+	$(VSCP_PROJ_BASE_DIR)/drivers/level2
 	$(INSTALL_PROGRAM) vscpl2drv_logger.so $(VSCP_PROJ_BASE_DIR)/drivers/level2
 
 uninstall: 
