--- a/Makefile.in
+++ b/Makefile.in
@@ -18,15 +18,7 @@ clean:
 	@for d in $(PROJ_SUBDIRS); do (cd $$d && $(MAKE) clean); done
 
 install:
-	@for d in $(PROJ_SUBDIRS); do (echo "====================================================" &&\
-	echo "Building in dir " $$d && echo "====================================================" && cd $$d && $(MAKE) install); done
-# startup script
-	$(INSTALL_PROGRAM) -b -m755 vscpd.startup_script_debian /etc/init.d/vscpd
-	update-rc.d vscpd defaults
-# main configuration file
-	mkdir -p /etc/vscp
-	$(INSTALL_PROGRAM) -b -m744 config_examples/vscpd.conf_unix_distro /etc/vscp/vscpd.conf
-# create folder structure
+	# create folder structure
 	mkdir -p @VSCPDIR@
 	mkdir -p @VSCPDIR@/logs
 	mkdir -p @VSCPDIR@/actions
@@ -46,7 +38,16 @@ install:
 	mkdir -p @VSCPDIR@/web/testws
 	mkdir -p @VSCPDIR@/vscp
 	mkdir -p @VSCPDIR@/tables
-# example data files
+	# Install sub components
+	@for d in $(PROJ_SUBDIRS); do (echo "====================================================" &&\
+	echo "Building in dir " $$d && echo "====================================================" && cd $$d && $(MAKE) install); done
+	# startup script
+	$(INSTALL_PROGRAM) -b -m755 vscpd.startup_script_debian /etc/init.d/vscpd
+	update-rc.d vscpd defaults
+	# main configuration file
+	mkdir -p /etc/vscp
+	$(INSTALL_PROGRAM) -b -m744 config_examples/vscpd.conf_unix_distro /etc/vscp/vscpd.conf
+	# example data files
 	$(INSTALL_PROGRAM) -b -m744 config_examples/variables.xml_distro @VSCPDIR@/variables.xml
 	$(INSTALL_PROGRAM) -b -m744 config_examples/dm.xml_distro @VSCPDIR@/dm.xml
 	$(INSTALL_PROGRAM) -b -m744 config_examples/simulation/simtempdata.txt @VSCPDIR@/simtempdata.txt
@@ -79,7 +80,7 @@ install:
 	@echo "   documentation is at http://www.vscp.org/docs"
 	@echo
 	@echo "   Have fun and remember to always be hungry and stay foolish or the other way"
-	@echo "   around be foolish - stay hungry! There is always a choice."
+	@echo "   around be foolish - stay hungry! - There is always a choice."
 
 web-files:
 	mkdir -p @VSCPDIR@/web
