--- a/src/vscp/drivers/level2/mqtt/linux/Makefile.in
+++ b/src/vscp/drivers/level2/mqtt/linux/Makefile.in
@@ -104,6 +104,7 @@ ALWAYS_BUILD = 	../../../../common/vscpremotetcpif.o\
 all: vscpl2drv_mqtt.so test
 
 install: all
+	$(VSCP_PROJ_BASE_DIR)/drivers/level2
 	$(INSTALL_PROGRAM) vscpl2drv_mqtt.so $(VSCP_PROJ_BASE_DIR)/drivers/level2
 
 uninstall: 
