--- a/src/vscp/drivers/level1/socketcan/linux/Makefile.in
+++ b/src/vscp/drivers/level1/socketcan/linux/Makefile.in
@@ -79,7 +79,7 @@ ALWAYS_BUILD = ../../../../common/guid.o\
 all: vscpl1_socketcandrv.so test
 
 install: all
-	$(VSCP_PROJ_BASE_DIR)/drivers/level1	
+	mkdir -p $(VSCP_PROJ_BASE_DIR)/drivers/level1	
 	$(INSTALL_PROGRAM) vscpl1_socketcandrv.so $(VSCP_PROJ_BASE_DIR)/drivers/level1
 
 uninstall: 
