--- a/src/vscp/drivers/level2/lmsensors/linux/Makefile.in
+++ b/src/vscp/drivers/level2/lmsensors/linux/Makefile.in
@@ -94,7 +94,7 @@ PROJOBJS = lmsensors.o\
 all: vscpl2drv_lmsensors.so
 
 install: all
-	$(VSCP_PROJ_BASE_DIR)/drivers/level2
+	mkdir -p $(VSCP_PROJ_BASE_DIR)/drivers/level2
 	$(INSTALL_PROGRAM) vscpl2drv_lmsensors.so $(VSCP_PROJ_BASE_DIR)/drivers/level2
 
 uninstall: 
